--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,12 @@ on:
     branches:
       - main
 
+  pull_request:
+    branches:
+      - main
+      - release
+      - develop
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
